<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TodoList">

    <item
        android:id="@+id/menu_delete_check"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always"
        android:title="@string/delete"
        android:orderInCategory="1"
        >
    </item>
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/sort">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_date"
                    android:checked="true"
                    android:title="@string/sort_date" />
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/sort_name" />
                <item
                    android:id="@+id/menu_sort_priority"
                    android:title="@string/sort_priority" />
            </group>
        </menu>

    </item>
    <item
        android:id="@+id/add_task"
        android:icon="@drawable/ic_note_add_white_24dp"
        android:orderInCategory="3"
        android:title="@string/add_task"
        app:showAsAction="always" />
</menu>








































